# py-fastapi-toy

./: .gitignore  README.md  client.py  main.py  pyproject.toml
db/: session.py
models/: user.py
routers/: auth_router.py  public_users_router.py  users.py  users_router.py
schemas/: auth.py  user.py
services/: auth_service.py  users_service.py
utils/: jwt.py
