[tool.poetry]
name = "py-fastapi-toy"
version = "0.1.0"
description = ""
authors = ["jimmy <najimmy@gmail.com=user.name=najimmy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
requests = "^2.32.3"
sqlmodel = "^0.0.24"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
pydantic = {extras = ["email"], version = "^2.11.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
